--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
+#APP SETTINGS
+APP_PORT=8080
+GIN_MODE=debug
+
+#DATABASE SETTINGS
 DB_URL="postgres://user:password@127.0.0.1:5432/database?sslmode=disable"
