--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ APP_PORT=8080
 GIN_MODE=debug
 
 #DATABASE SETTINGS
-DB_URL="postgres://user:password@127.0.0.1:5432/database?sslmode=disable"
+DB_URL="postgres://postgres:mangrupa2022@192.168.100.114:5432/auth?sslmode=disable"
